new file:   .m2/ch/qos/logback/logback-classic/1.5.18/_remote.repositories 	new file:   .m2/ch/qos/logback/logback-classic/1.5.18/logback-classic-1.5.18.jar 	new file:   .m2/ch/qos/logback/logback-classic/1.5.18/logback-classic-1.5.18.jar.sha1 	new file:   .m2/ch/qos/logback/logback-classic/1.5.18/logback-classic-1.5.18.pom 	new file:   .m2/ch/qos/logback/logback-classic/1.5.18/logback-classic-1.5.18.pom.sha1 	new file:   .m2/ch/qos/logback/logback-core/1.5.18/_remote.repositories 	new file:   .m2/ch/qos/logback/logback-core/1.5.18/logback-core-1.5.18.jar 	new file:   .m2/ch/qos/logback/logback-core/1.5.18/logback-core-1.5.18.jar.sha1 	new file:   .m2/ch/qos/logback/logback-core/1.5.18/logback-core-1.5.18.pom 	new file:   .m2/ch/qos/logback/logback-core/1.5.18/logback-core-1.5.18.pom.sha1 	new file:   .m2/ch/qos/logback/logback-parent/1.5.18/_remote.repositories 	new file:   .m2/ch/qos/logback/logback-parent/1.5.18/logback-parent-1.5.18.pom 	new file:   .m2/ch/qos/logback/logback-parent/1.5.18/logback-parent-1.5.18.pom.sha1 	new file:   .m2/cn/hutool/hutool-all/5.8.29/_remote.repositories 	new file:   .m2/cn/hutool/hutool-all/5.8.29/hutool-all-5.8.29.jar 	new file:   .m2/cn/hutool/hutool-all/5.8.29/hutool-all-5.8.29.jar.sha1 	new file:   .m2/cn/hutool/hutool-all/5.8.29/hutool-all-5.8.29.pom 	new file:   .m2/cn/hutool/hutool-all/5.8.29/hutool-all-5.8.29.pom.sha1 	new file:   .m2/cn/hutool/hutool-parent/5.8.29/_remote.repositories 	new file:   .m2/cn/hutool/hutool-parent/5.8.29/hutool-parent-5.8.29.pom 	new file:   .m2/cn/hutool/hutool-parent/5.8.29/hutool-parent-5.8.29.pom.sha1 	new file:   .m2/com/baomidou/mybatis-plus-annotation/3.5.7/_remote.repositories 	new file:   .m2/com/baomidou/mybatis-plus-annotation/3.5.7/mybatis-plus-annotation-3.5.7.jar 	new file:   .m2/com/baomidou/mybatis-plus-annotation/3.5.7/mybatis-plus-annotation-3.5.7.jar.sha1 	new file:   .m2/com/baomidou/mybatis-plus-annotation/3.5.7/mybatis-plus-annotation-3.5.7.pom 	new file:   .m2/com/baomido